[gd_scene load_steps=8 format=3 uid="uid://ymi2tu1ay0ys"]

[ext_resource type="Script" path="res://Source/UI/task_solver.gd" id="1_wemgo"]
[ext_resource type="Texture2D" uid="uid://iu5juvgjc1w6" path="res://Assets/background, UI-UX, assets/guitar hero/first row.png" id="2_3wtc7"]
[ext_resource type="Texture2D" uid="uid://sgqxmche51tw" path="res://Assets/background, UI-UX, assets/guitar hero/skeleton.png" id="2_8o1l0"]
[ext_resource type="Texture2D" uid="uid://d0xi7qirjlrae" path="res://Assets/background, UI-UX, assets/guitar hero/button.png" id="2_ufdck"]
[ext_resource type="Texture2D" uid="uid://c3lknmrqu27it" path="res://Assets/background, UI-UX, assets/guitar hero/second row.png" id="3_dcsvb"]
[ext_resource type="Texture2D" uid="uid://btvmc1en1c4v4" path="res://Assets/background, UI-UX, assets/guitar hero/third row.png" id="4_tt6aq"]

[sub_resource type="LabelSettings" id="LabelSettings_kupd0"]
font_size = 40
font_color = Color(0, 0, 0, 1)

[node name="TaskSolver" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wemgo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Slide1" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Player1ButtonBox" type="TextureRect" parent="VBoxContainer/Slide1"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -30.0
offset_right = 100.0
offset_bottom = 30.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("2_ufdck")

[node name="Label" type="Label" parent="VBoxContainer/Slide1/Player1ButtonBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "T"
label_settings = SubResource("LabelSettings_kupd0")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Player2ButtonBox" type="TextureRect" parent="VBoxContainer/Slide1"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -30.0
offset_right = -40.0
offset_bottom = 30.0
grow_vertical = 2
texture = ExtResource("2_ufdck")

[node name="Label" type="Label" parent="VBoxContainer/Slide1/Player2ButtonBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "T"
label_settings = SubResource("LabelSettings_kupd0")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="OrangeLine" type="TextureRect" parent="VBoxContainer/Slide1"]
modulate = Color(1, 1, 1, 0.745098)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -16.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3wtc7")
expand_mode = 1

[node name="HitBox" type="TextureRect" parent="VBoxContainer/Slide1"]
z_as_relative = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -50.0
offset_right = 125.0
offset_bottom = 50.0
grow_vertical = 2
expand_mode = 1

[node name="Slide2" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Player1ButtonBox" type="TextureRect" parent="VBoxContainer/Slide2"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -30.0
offset_right = 100.0
offset_bottom = 30.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("2_ufdck")

[node name="Label" type="Label" parent="VBoxContainer/Slide2/Player1ButtonBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "T"
label_settings = SubResource("LabelSettings_kupd0")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Player2ButtonBox" type="TextureRect" parent="VBoxContainer/Slide2"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -30.0
offset_right = -40.0
offset_bottom = 30.0
grow_vertical = 2
texture = ExtResource("2_ufdck")

[node name="Label" type="Label" parent="VBoxContainer/Slide2/Player2ButtonBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "T"
label_settings = SubResource("LabelSettings_kupd0")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="OrangeLine" type="TextureRect" parent="VBoxContainer/Slide2"]
modulate = Color(1, 1, 1, 0.745098)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -16.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_dcsvb")
expand_mode = 1

[node name="HitBox" type="TextureRect" parent="VBoxContainer/Slide2"]
z_as_relative = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -50.0
offset_right = 125.0
offset_bottom = 50.0
grow_vertical = 2
expand_mode = 1

[node name="Slide3" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Player1ButtonBox" type="TextureRect" parent="VBoxContainer/Slide3"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -30.0
offset_right = 100.0
offset_bottom = 30.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("2_ufdck")

[node name="Label" type="Label" parent="VBoxContainer/Slide3/Player1ButtonBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "T"
label_settings = SubResource("LabelSettings_kupd0")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Player2ButtonBox" type="TextureRect" parent="VBoxContainer/Slide3"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -30.0
offset_right = -40.0
offset_bottom = 30.0
grow_vertical = 2
texture = ExtResource("2_ufdck")

[node name="Label" type="Label" parent="VBoxContainer/Slide3/Player2ButtonBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "T"
label_settings = SubResource("LabelSettings_kupd0")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="OrangeLine" type="TextureRect" parent="VBoxContainer/Slide3"]
modulate = Color(1, 1, 1, 0.745098)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -17.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_tt6aq")
expand_mode = 1

[node name="HitBox" type="TextureRect" parent="VBoxContainer/Slide3"]
z_as_relative = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -50.0
offset_right = 125.0
offset_bottom = 50.0
grow_vertical = 2
expand_mode = 1

[node name="WhiteLines" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 112.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8o1l0")
